--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Shailesh Nanisetty" />
   <meta property="og:description" content="Machine Learning Developer" />
-  <meta property="og:url" content="https://snanisetty.github.io/" />
+  <meta property="og:url" content="https://Shailesh-05.github.io/" />
   <meta property="og:site_name" content="Shailesh Nanisetty" />
-  <meta property="article:publisher" content="https://snanisetty.github.io/" />
-  <meta property="og:image" content="https://snanisetty.github.io/examples/preview.JPG" />
+  <meta property="article:publisher" content="https://Shailesh-05.github.io/" />
+  <meta property="og:image" content="https://Shailesh-05.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@varad_bhogayata" />
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Shailesh's resume in a new tab" href="https://snanisetty.github.io/assets/resume/CV_ShaileshLat.pdf" target="_blank"
+        <a aria-label="Open Shailesh's resume in a new tab" href="https://Shailesh-05.github.io/assets/resume/CV_ShaileshLat.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -193,7 +193,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Shailesh's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1VUqovTEEpjvjnrWbkoC48cWq_G7JontP/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
