--- a/index.html
+++ b/index.html
@@ -308,8 +308,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.servicenow.com/research/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="https://www.servicenow.com/research/" target="_blank"></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -344,8 +343,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.synapsismedical.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.synapsismedical.com" target="_blank"></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -380,8 +378,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.bamfunds.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.bamfunds.com" target="_blank"></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -420,8 +417,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.16bit.ai" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.16bit.ai" target="_blank"></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -457,8 +453,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.bharatsmartservices.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+                <a href="https://www.bharatsmartservices.com" target="_blank"></a>
               </div>
               <div class="col s12 m10">
                 <p>
@@ -610,7 +605,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Segmentation.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/Segmentation.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Few-Shot Segmentor<i
@@ -713,7 +708,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Predictive_Process_Mining.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/Predictive_Process_Mining.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Predictive Process Mining<i
@@ -760,10 +755,16 @@
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/C++.png" class="responsive-img" />C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/JS.png" class="responsive-img" />Javascript
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/R.png" class="responsive-img" />R
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/Matlab.png" class="responsive-img" />Matlab
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
@@ -782,6 +783,21 @@
           <div class="card-content">
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/NLTK.jpg" class="responsive-img" />NLTK
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/hf-logo-with-title.png" class="responsive-img" />Hugging Face
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/Scipy.png" class="responsive-img" />Scipy
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/Statsmodels.png" class="responsive-img" />Statsmodels
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/Pyspark.png" class="responsive-img" />PySpark
+              </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
@@ -813,9 +829,6 @@
                 <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
-              <div class="col s4 m2">
                 <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
               <div class="col s4 m2">
@@ -831,7 +844,7 @@
         <!-- Other -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
+            <h4 class="brown-text light">Others</h4>
             <div class="row text-center">
 
 
