--- a/index.html
+++ b/index.html
@@ -356,13 +356,13 @@
             <div class="role brown-text text-darken-2">ML Developer Intern</div>
             <ul>
               <li>
-                Created react-based modules for real-time facial emotion, head pose & HeartRate prediction respectively with latency of 55ms/frame.
+                Developed a React-based real-time system integrating three machine learning models to monitor facial expressions, head poses and heart rates with a 75 ms latency.
               </li>
               <li>
-                Developed anomaly detection model for wearable health monitoring, improving accuracy by 15% through reduced false alarms.
+                Implemented a self-supervised learning model using Autoencoders for clustering and anomaly detection on outputs of the React-based app.
               </li>
               <li>
-                Optimizing Synapsis' ML models for real-time health insights on resource-constrained devices from asynchronous data streams
+                Pioneering a multimodal human monitoring approach that delivers insights into the interplay of emotional, physical and physiological states for health and behavioral analysis.
               </li>
               <li>
                 <b>Tools:</b> Python, PyTorch, Tensorflow, React, Docker
