--- a/index.html
+++ b/index.html
@@ -356,13 +356,16 @@
             <div class="role brown-text text-darken-2">ML Developer Intern</div>
             <ul>
               <li>
-                Developed a React-based real-time system integrating three machine learning models to monitor facial expressions, head poses and heart rates with a 75 ms latency.
+                Developed a React app integrating 3 ML models to get real-time facial expressions, head poses and heart rates with a 75 ms latency.
               </li>
               <li>
-                Implemented a self-supervised learning model using Autoencoders for clustering and anomaly detection on outputs of the React-based app.
+                Designed SSL model leveraging contrastive learning with triplet loss to improve representation learning for the aforementioned models.
               </li>
               <li>
-                Pioneering a multimodal human monitoring approach that delivers insights into the interplay of emotional, physical and physiological states for health and behavioral analysis.
+                Implemented hard negative mining in triplet loss to enhance embedding separability, reducing facial emotion classification loss by 15%.
+              </li>
+              <li>
+                Pioneering a multimodal monitoring system to analyze interaction of emotional, physical & physiological states for tailored insights.
               </li>
               <li>
                 <b>Tools:</b> Python, PyTorch, Tensorflow, React, Docker
