--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Research Savvy", "Fast Learner"],
+      strings: ["Curious Mind", "Research Savvy", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
