--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Shailesh's Resume in a new tab"
-          href="https://drive.google.com/file/d/1VUqovTEEpjvjnrWbkoC48cWq_G7JontP/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1UuvKFmOCfnor7nmHbfQr4SQwMoz_g4Tv/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -314,11 +314,11 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.servicenow.com/research/" target="_blank"
-                      class="teal-text hoverline">Servicenow Research</a></span>
+                      class="teal-text hoverline">Servicenow Research, Multimodal Foundation Models Lab</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">External Research Collaborator</div>
+            <div class="role brown-text text-darken-2">Visiting Researcher</div>
             <ul>
               <li>
                 Creating AgentADA: an autonomous agent that learns & applies advanced data analytics tools from unstructured code sources
