--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.servicenow.com/research/" target="_blank"
-                      class="teal-text hoverline">Servicenow Research, Multimodal Foundation Models Lab</a></span>
+                      class="teal-text hoverline">Servicenow Research</a></span>
                 </p>
               </div>
             </div>
@@ -334,7 +334,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>October 2024 - Present | Toronto, Canada</span>
+            <span>February 2025 - Present | Toronto, Canada</span>
           </div>
         </div>
 
@@ -365,7 +365,7 @@
                 Implemented hard negative mining in triplet loss to enhance embedding separability, reducing facial emotion classification loss by 15%.
               </li>
               <li>
-                Pioneering a multimodal monitoring system to analyze interaction of emotional, physical & physiological states for tailored insights.
+                Pioneered a multimodal monitoring system to analyze interaction of emotional, physical & physiological states for tailored insights.
               </li>
               <li>
                 <b>Tools:</b> Python, PyTorch, Tensorflow, React, Docker
@@ -373,7 +373,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>Aug 2024 - Present | Toronto, Canada</span>
+            <span>Aug 2024 - Feb 2025 | Toronto, Canada</span>
           </div>
         </div>
 
@@ -391,7 +391,7 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Summer Associate (Data Intelligence Team)</div>
+            <div class="role brown-text text-darken-2">Data Science Associate</div>
             <ul>
               <li>
                 Developed an Apache Airflow DAG for BAM Elevate, automating data population processes & improving workflow efficiency by 30%
