--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         5. mdi-file-folder-shared
         -->
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
-          onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
+          onclick="window.open('https://drive.google.com/file/d/1J3sM-BJ3LgPOEZ5Vi6qIhBhlQB46SpF6/view?usp=share_link')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Shailesh's resume in a new tab" href="https://Shailesh-05.github.io/assets/resume/NSShailesh_Resume.pdf" target="_blank"
+        <a aria-label="Open Shailesh's resume in a new tab" href="https://Shailesh-05.github.io/assets/resume/Shailesh_NS.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -193,7 +193,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Shailesh's Resume in a new tab"
-          href="https://drive.google.com/file/d/1UuvKFmOCfnor7nmHbfQr4SQwMoz_g4Tv/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1J3sM-BJ3LgPOEZ5Vi6qIhBhlQB46SpF6/view?usp=share_link" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -321,13 +321,14 @@
             <div class="role brown-text text-darken-2">Visiting Researcher</div>
             <ul>
               <li>
-                Creating AgentADA: an autonomous agent that learns & applies advanced data analytics tools from unstructured code sources
+                Developed AgentAda, an innovative LLM-powered analytics agent that automates method selection for specialized insights.
               </li>
               <li>
-                Developed the Insight Toolkit by extracting, verifying & categorizing code blocks from various analytics notebooks.
+                Architected a 3-part system integrating a question generator, RAG-based skill matcher & code generator to streamline data analysis.
               </li>
-              <li>Automated metadata generation & skill filtering using few-shot & instruction-based LLM prompting techniques respectively.</li>
-              <li>Conducting research to optimize RAG workflows, focusing on improving tool retrieval & adaptation for domain-specific analytics.</li>
+              <li>Created KAGGLEBENCH, a benchmarking tool of expert-curated notebooks to validate AgentAda’s analytical performance.</li>
+              <li>Secured 48.78% human approval demonstrating AgentAda’s superiority over traditional methods with an LLM-as-a-judge strategy.</li>
+              <li>Developing BigInsightBench - The 1st Global Benchmark for Multimodal Analytics to enhance LLM-driven decision making.</li>
               <li>
                 <b>Tools:</b> Python, LLMs, Prompt Engineering, Git
               </li>
@@ -403,7 +404,7 @@
                 Optimized SQL queries for faster geographical expansion insights, reducing extraction & aggregation time by 40%.
               </li>
               <li>
-                Built dynamic Streamlit dashboards for various use cases providing real-time insights, supporting key investment decisions.
+                Developed dynamic Streamlit dashboards to analyze investor feedback & guide decisions on geographical expansions in real-time.
               </li>
               <li>
                 <b>Tools:</b> Python, PostgreSQL, Streamlit, PySpark, Databricks
